fixing header link; attempting fix for minor type size discrepency on mobile

--- a/styles/main.css
+++ b/styles/main.css
@@ -34,6 +34,7 @@ body, h1, h2, h3, p, blockquote, ul, li, a {
 a {
   color: #4933f9;
   text-decoration: none;
+  font-size: inherit;
 }
 
       /* * * * * */
@@ -117,6 +118,10 @@ a:not(.nav-item-link) {
   margin: 0 -3px;
   padding: 0 3px;
   transition: background-color .2s;
+}
+h1 a:not(.nav-item-link) {
+  margin: 0;
+  padding: 0;
 }
 a:not(.nav-item-link):hover {
   background-color: var(--color-highlight);
